# project_bank_widget

./: .coverage  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widjet_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widjet_py.html
src/: generators.py  main.py  masks.py  processing.py  widget.py  widjet.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widjet.py
