[project]
name = "pycharmmiscproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pip (>=26.0.1,<27.0.0)",
    "setuptools (>=82.0.0,<83.0.0)",
    "wheel (>=0.46.3,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]

lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '''(\venv/)'''

[tool.black]
line-length = 119
exclude = '''(\.git/)'''

[tool.isort]
line_length = 119
multi_line_output = 3